# opengl_framework

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: opengl_framework-config.cmake.in
include/glad/: glad.h
include/opengl_framework/: APIConfig.h  Common.h  FrameBufferObject.h  IndexBufferObject.h  RenderBufferObject.h  Shader.h  Texture2D.h  VertexArrayObject.h  VertexBufferObject.h
src/: FrameBufferObject.cpp  GLCheck.h  IndexBufferObject.cpp  RenderBufferObject.cpp  Shader.cpp  Texture2D.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  glad.c
